--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,12 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
+
     <groupId>com.antwerkz.manhattan</groupId>
     <artifactId>manhattan</artifactId>
     <version>0.1-SNAPSHOT</version>
