--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.antwerkz.manhattan</groupId>
     <artifactId>manhattan</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>com.antwerkz.manhattan manhattan</name>
